--- a/config.yaml
+++ b/config.yaml
@@ -38,6 +38,7 @@ params:
       suscité un tel engouement que j'ai décidé d'écrire un article par jour sur
       des sujets aléatoires. Ici, vous trouverez une collection croissante de
       mes actus.
+      [![Poster](/img/poster-lowres.jpg)](/img/poster.pdf)
 
   socialIcons:
     - name: github
